Java8 questions.